--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Hello World!</title>
+        <link rel="stylesheet" href="bluestyle.css">
     </head>
     <body>
-        
+
 
         <h1>Hello World!</h1>
         <p>This is the first file in my new Git Repo.</p>
